<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.jirkam</groupId>
  <artifactId>ni-test</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <native.maven.plugin.version>0.10.5</native.maven.plugin.version>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <mainClass>com.github.jirkafm.Main</mainClass>
    <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.plugin.version}</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>libs/</classpathPrefix>
              <mainClass>${mainClass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>${native.maven.plugin.version}</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <configuration>
              <verbose>true</verbose>
              <mainClass>${mainClass}</mainClass>
              <buildArgs>
                <buildArg>--enable-https</buildArg>
                <buildArg>--enable-monitoring=jfr</buildArg>
                <buildArg>--add-modules jdk.jcmd,jdk.attach</buildArg>
                <buildArg>--add-opens jdk.attach/sun.tools.attach=ALL-UNNAMED</buildArg>
                <buildArg>--add-opens jdk.attach/com.sun.tools.attach=ALL-UNNAMED</buildArg>
                <buildArg>--add-opens jdk.jcmd/sun.tools.common=ALL-UNNAMED</buildArg>
                <buildArg>--add-opens jdk.jcmd/sun.tools.jcmd=ALL-UNNAMED</buildArg>
                <buildArg>-Os</buildArg>
                <buildArg>--emit build-report</buildArg>
              </buildArgs>
              <agent>
                <enabled>false</enabled>
                <metadataCopy>
                  <disabledStages>
                    <stage>main</stage>
                  </disabledStages>
                  <merge>true</merge>
                  <outputDirectory>src/test/resources/META-INF/native-image</outputDirectory>
                </metadataCopy>
              </agent>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
